# grobid-experiment1

./: .gitignore  pyproject.toml
grobid_experiment1/: config.py
grobid_experiment1/experiment01_grobid_client_hello_world/: config.json  run.py
grobid_experiment1/experiment01_grobid_client_hello_world/output/: Turnhout et al. - 2013 - Tradeoffs in Design Research Development Oriented.tei.xml
grobid_experiment1/experiment02_grobid_hello_world/: run.py
grobid_experiment1/experiment02_grobid_hello_world/output/: Turnhout et al. - 2013 - Tradeoffs in Design Research Development Oriented.xml
grobid_experiment1/utils/: docker.py
