[tool.poetry]
name = "grobid-experiment1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "grobid_experiment1"}]

[tool.poetry.dependencies]
python = "^3.10"
grobid-client-python = "^0.0.5"
docker = "^6.1.3"
tenacity = "^8.2.2"
grobid = {extras = ["json"], version = "^0.2.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
